ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: runbot-ingress
spec:
  rules:
  - host: runbot.dev.erpgo.sh
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
